update java version to 26 & add dependencies